--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
+    "dev": "tsx --watch src/index.ts",
     "build": "tsc -p tsconfig.build.json",
     "test": "vitest",
     "test:run": "vitest --run",
@@ -33,15 +34,20 @@
   },
   "homepage": "https://github.com/Raigodo/FauxAPI#readme",
   "dependencies": {
-    "express": "^5.1.0"
+    "dotenv": "^17.2.3",
+    "drizzle-orm": "^0.44.6",
+    "express": "^5.1.0",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.37.0",
     "@tsconfig/node23": "^23.0.2",
     "@types/express": "^5.0.3",
     "@types/node": "^24.7.1",
+    "@types/pg": "^8.15.5",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/eslint-plugin": "^1.3.16",
+    "drizzle-kit": "^0.31.5",
     "eslint": "^9.37.0",
     "eslint-plugin-perfectionist": "^4.15.1",
     "husky": "^9.1.7",
