--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "dev": "tsx --watch src/index.ts",
     "build": "tsc -p tsconfig.build.json",
+    "db:push": "npx drizzle-kit push",
     "test": "vitest",
     "test:run": "vitest --run",
     "test:ui": "vitest --ui",
@@ -34,6 +35,7 @@
   },
   "homepage": "https://github.com/Raigodo/FauxAPI#readme",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.907.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
     "express": "^5.1.0",
