--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
   "homepage": "https://github.com/Raigodo/FauxAPI#readme",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.907.0",
+    "@types/multer": "^2.0.0",
     "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.6",
     "express": "^5.1.0",
+    "multer": "^2.0.2",
     "pg": "^8.16.3"
   },
   "devDependencies": {
