very basic endpoints

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
 PORT=3000
 DATABASE_URL=postgresql://myuser:mypassword@localhost:5432/faux_api
+
+BUCKET_ENDPOINT=http://localhost:9000
+BUCKET_REGION=us-east-1
+BUCKET_ACCESS_KEY_ID=minioadmin
+BUCKET_SECRET_ACCESS_KEY=minioadmin
+BUCKET_FORCE_PATH_STYLE=true
+BUCKET_RESOURCES=resources
+BUCKET_SYSTEM=system
