--- a/.prettierrc
+++ b/.prettierrc
@@ -1,3 +1,7 @@
 {
-  "printWidth": 150
+  "semi": true,
+  "singleQuote": false,
+  "tabWidth": 4,
+  "trailingComma": "es5",
+  "printWidth": 100
 }
