--- a/package.json
+++ b/package.json
@@ -1,68 +1,72 @@
 {
-  "name": "fauxapi",
-  "version": "1.0.0",
-  "description": "",
-  "type": "module",
-  "main": "index.js",
-  "scripts": {
-    "dev": "tsx --watch src/index.ts",
-    "build": "tsc -p tsconfig.build.json",
-    "db:push": "npx drizzle-kit push",
-    "test": "vitest",
-    "test:run": "vitest --run",
-    "test:ui": "vitest --ui",
-    "coverage": "vitest run --coverage",
-    "prepare": "husky"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint",
-      "prettier --check"
-    ],
-    "*.{json,yml,yaml,md}": [
-      "prettier --check"
-    ]
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Raigodo/FauxAPI.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Raigodo/FauxAPI/issues"
-  },
-  "homepage": "https://github.com/Raigodo/FauxAPI#readme",
-  "dependencies": {
-    "@aws-sdk/client-s3": "^3.907.0",
-    "@types/multer": "^2.0.0",
-    "dotenv": "^17.2.3",
-    "drizzle-orm": "^0.44.6",
-    "express": "^5.1.0",
-    "multer": "^2.0.2",
-    "pg": "^8.16.3"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.37.0",
-    "@tsconfig/node23": "^23.0.2",
-    "@types/express": "^5.0.3",
-    "@types/node": "^24.7.1",
-    "@types/pg": "^8.15.5",
-    "@vitest/coverage-v8": "^3.2.4",
-    "@vitest/eslint-plugin": "^1.3.16",
-    "drizzle-kit": "^0.31.5",
-    "eslint": "^9.37.0",
-    "eslint-plugin-perfectionist": "^4.15.1",
-    "husky": "^9.1.7",
-    "lint-staged": "^16.2.3",
-    "prettier": "^3.6.2",
-    "tsx": "^4.20.6",
-    "typescript": "^5.9.3",
-    "typescript-eslint": "^8.46.0",
-    "vitest": "^3.2.4"
-  },
-  "imports": {
-    "#*": "./src/*"
-  }
+    "name": "fauxapi",
+    "version": "1.0.0",
+    "description": "",
+    "type": "module",
+    "main": "index.js",
+    "scripts": {
+        "dev": "tsx --watch src/index.ts",
+        "build": "tsc -p tsconfig.build.json",
+        "db:push": "npx drizzle-kit push",
+        "db:seed": "npm i drizzle-seed",
+        "test": "vitest",
+        "test:run": "vitest --run",
+        "test:ui": "vitest --ui",
+        "coverage": "vitest run --coverage",
+        "prepare": "husky"
+    },
+    "lint-staged": {
+        "*.{js,jsx,ts,tsx}": [
+            "eslint",
+            "prettier --check"
+        ],
+        "*.{json,yml,yaml,md}": [
+            "prettier --check"
+        ]
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Raigodo/FauxAPI.git"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/Raigodo/FauxAPI/issues"
+    },
+    "homepage": "https://github.com/Raigodo/FauxAPI#readme",
+    "dependencies": {
+        "@aws-sdk/client-s3": "^3.907.0",
+        "@aws-sdk/s3-request-presigner": "^3.907.0",
+        "@types/multer": "^2.0.0",
+        "dotenv": "^17.2.3",
+        "drizzle-orm": "^0.44.6",
+        "drizzle-seed": "^0.3.1",
+        "express": "^5.1.0",
+        "multer": "^2.0.2",
+        "pg": "^8.16.3",
+        "uuid": "^13.0.0"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.37.0",
+        "@tsconfig/node23": "^23.0.2",
+        "@types/express": "^5.0.3",
+        "@types/node": "^24.7.1",
+        "@types/pg": "^8.15.5",
+        "@vitest/coverage-v8": "^3.2.4",
+        "@vitest/eslint-plugin": "^1.3.16",
+        "drizzle-kit": "^0.31.5",
+        "eslint": "^9.37.0",
+        "eslint-plugin-perfectionist": "^4.15.1",
+        "husky": "^9.1.7",
+        "lint-staged": "^16.2.3",
+        "prettier": "^3.6.2",
+        "tsx": "^4.20.6",
+        "typescript": "^5.9.3",
+        "typescript-eslint": "^8.46.0",
+        "vitest": "^3.2.4"
+    },
+    "imports": {
+        "#*": "./src/*"
+    }
 }
