--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
         "db:seed": "npm i drizzle-seed",
         "test": "vitest",
         "test:run": "vitest --run",
-        "test:ui": "vitest --ui",
-        "coverage": "vitest run --coverage",
         "prepare": "husky"
     },
     "lint-staged": {
@@ -44,7 +42,6 @@
         "bcrypt": "^6.0.0",
         "dotenv": "^17.2.3",
         "drizzle-orm": "^0.44.6",
-        "drizzle-seed": "^0.3.1",
         "express": "^5.1.0",
         "jsonwebtoken": "^9.0.2",
         "multer": "^2.0.2",
@@ -57,14 +54,15 @@
         "@types/express": "^5.0.3",
         "@types/node": "^24.7.1",
         "@types/pg": "^8.15.5",
-        "@vitest/coverage-v8": "^3.2.4",
+        "@types/supertest": "^6.0.3",
         "@vitest/eslint-plugin": "^1.3.16",
-        "drizzle-kit": "^0.31.5",
+        "drizzle-seed": "^0.3.1",
         "eslint": "^9.37.0",
         "eslint-plugin-perfectionist": "^4.15.1",
         "husky": "^9.1.7",
         "lint-staged": "^16.2.3",
         "prettier": "^3.6.2",
+        "supertest": "^7.1.4",
         "tsx": "^4.20.6",
         "typescript": "^5.9.3",
         "typescript-eslint": "^8.46.0",
