--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "scripts": {
         "dev": "tsx --watch src/index.ts",
         "build": "tsc -p tsconfig.build.json",
-        "db:push": "npx drizzle-kit push",
+        "db:generate": "npx drizzle-kit generate --config=drizzle.config.ts",
+        "db:push": "npx drizzle-kit push --config=drizzle.config.ts",
         "db:seed": "npm i drizzle-seed",
-        "test": "vitest",
-        "test:run": "vitest --run",
+        "db:generate:test": "npx drizzle-kit generate --config=drizzle.sqlite.config.ts",
+        "test": "npm run db:generate:test && vitest",
+        "test:run": "npm run db:generate:test && vitest --run",
         "prepare": "husky"
     },
     "lint-staged": {
@@ -36,10 +38,12 @@
     "dependencies": {
         "@aws-sdk/client-s3": "^3.907.0",
         "@aws-sdk/s3-request-presigner": "^3.907.0",
+        "@libsql/client": "^0.15.15",
         "@types/bcrypt": "^6.0.0",
         "@types/jsonwebtoken": "^9.0.10",
         "@types/multer": "^2.0.0",
         "bcrypt": "^6.0.0",
+        "better-sqlite3": "^12.4.1",
         "dotenv": "^17.2.3",
         "drizzle-orm": "^0.44.6",
         "express": "^5.1.0",
@@ -56,6 +60,7 @@
         "@types/pg": "^8.15.5",
         "@types/supertest": "^6.0.3",
         "@vitest/eslint-plugin": "^1.3.16",
+        "drizzle-kit": "^0.31.5",
         "drizzle-seed": "^0.3.1",
         "eslint": "^9.37.0",
         "eslint-plugin-perfectionist": "^4.15.1",
