dockerized app; remove husky and import alias

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
             - "5432:5432"
         volumes:
             - postgres_data:/var/lib/postgresql/data
+
     bucket:
         image: "quay.io/minio/minio:RELEASE.2025-03-12T18-04-18Z"
         container_name: minio
@@ -26,6 +27,7 @@ services:
         volumes:
             - minio_data:/data
         command: server /data --console-address ":9001"
+
     createbuckets:
         image: quay.io/minio/mc:RELEASE.2025-03-12T17-29-24Z
         depends_on:
@@ -39,6 +41,40 @@ services:
             /usr/bin/mc mb dockerminio/${BUCKET_SYSTEM};
             exit 0;
             "
+
+    app:
+        build:
+            context: .
+            dockerfile: Dockerfile
+        container_name: express_app
+        restart: unless-stopped
+        env_file: .env
+        environment:
+            #kubernetes.docker.internal = localhost for docker on windows
+            #see C:\Windows\System32\drivers\etc\hosts
+            #
+            # # Added by Docker Desktop
+            # 192.168.91.145 host.docker.internal
+            # 192.168.91.145 gateway.docker.internal
+            # # To allow the same kube context to work on the host and the container:
+            # 127.0.0.1 kubernetes.docker.internal
+            #
+            DATABASE_URL: postgresql://myuser:mypassword@kubernetes.docker.internal:5432/faux_api
+            BUCKET_ENDPOINT: http://kubernetes.docker.internal:9000
+        depends_on:
+            - database
+            - createbuckets
+        ports:
+            - "3000:3000"
+
+    migrate:
+        build:
+            context: .
+            dockerfile: Dockerfile.migrate
+        depends_on:
+            - database
+        environment:
+            DATABASE_URL: postgresql://myuser:mypassword@kubernetes.docker.internal:5432/faux_api
 
 volumes:
     postgres_data:
